@@ -2,7 +2,7 @@ use Test;
 
 use Text::Utils :ALL;
 
-plan 4;
+plan 6;
 
 my $s1 = 'sub foo($song, $tool, @long-array, :$good) is export { say pwd }';
 
@@ -16,3 +16,9 @@ my $brk = "Free";
 my ($pre, $post) = split-line $s2, $brk, :break-after;
 is $pre, "Free", "split 'Free Sans' at 'Free', :breakafter, pre: '$pre'";
 is $post, " Sans", "split 'Free Sans' at 'Free', :breakafter, post: '$post'";
+
+my $s3 = " key : some   text";
+$brk = ':';
+($pre, $post) = split-line $s3, $brk, :clean;
+is $pre, "key", "use new :clean";
+is $post, "some text", "use new :clean";
